Cambios menores de url

--- a/informacion/informComp.html
+++ b/informacion/informComp.html
@@ -10,7 +10,9 @@
 <body>
     <header>
         <div class="logo-container">
-            <img class="logo" src="../img/aprendizaje-electronico.png" alt="Logo">
+            <a href="../index.html">
+                <img class="logo" src="../img/aprendizaje-electronico.png" alt="Logo">
+            </a>
             <h1 class="Titulo">MULTI <br> STAND</h1>
         </div>
     
@@ -29,11 +31,11 @@
     </header>
     
     <nav class="menu">
-        <a href="Computadores.html">Computadoras</a>
-        <a href="tabletas.html">Tabletas <br> Gráficas</a>
-        <a href="progFreeDesign.html">Programas <br> Gratuitos Diseño</a>
-        <a href="programacion.html">Programación</a>
-        <a href="licenciasDesign.html">Licencias de <br> Programas Diseño</a>
+        <a href="../Computadores.html">Computadoras</a>
+        <a href="../tabletas.html">Tabletas <br> Gráficas</a>
+        <a href="../progFreeDesign.html">Programas <br> Gratuitos Diseño</a>
+        <a href="../programacion.html">Programación</a>
+        <a href="../licenciasDesign.html">Licencias de <br> Programas Diseño</a>
     </nav>
 
     <div class="container mt-4">
