--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <header>
         <div class="logo-container">
-            <img class="logo" src="img/aprendizaje-electronico.png" alt="Logo">
+            <a href="index.html">
+                <img class="logo" src="img/aprendizaje-electronico.png" alt="Logo">
+            </a>
             <h1 class="Titulo">MULTI <br> STAND</h1>
         </div>
     
