--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <div class="carousel-item active">
                 <div class="d-flex justify-content-center align-items-center">
                     <a href="https://www.adobe.com/co/creativecloud/buy/students/illustrator.html" target="_blank">
-                        <img src="img/pagina ilustrator.PNG" class="img-fluid w-50" alt="Illustrator">
+                        <img src="img/pagina ilustrator.PNG" class="img-fluid w-55" alt="Illustrator">
                     </a>
                     <img src="img/illustrator1.webp" class="img-fluid w-50 ms-3" alt="Illustrator">
                 </div>
@@ -81,32 +81,37 @@
                 <div class="producto">
                     <img src="img/Wacom_tablet.jpg" alt="WACOM Intuos Pro Mediana">
                     <h3>WACOM Intuos Pro Mediana</h3>
-                    <p>$550.000</p>
+                    <!--<p>$550.000</p>-->
                 </div>
                 <div class="producto">
                     <img src="img/Lenovo1.jpeg" alt="LENOVO - S2YTONY1LM">
                     <h3>LENOVO - S2YTONY1LM</h3>
-                    <p>$520.000</p>
+                    <!-- <p>$520.000</p> -->
                 </div>
                 <div class="producto">
                     <img src="img/adobe.png" alt="Adobe Plus">
                     <h3>Adobe Plus</h3>
-                    <p>$75.000</p>
+                    <!-- <p>$75.000</p> -->
                 </div>
                 <div class="producto">
                     <img src="img/blender.png" alt="Blender OP">
                     <h3>Blender OP</h3>
-                    <p>Gratis</p>
+                    <!-- <p>Gratis</p> -->
                 </div>
                 <div class="producto">
                     <img src="img/unity.png" alt="Unity Class">
                     <h3>Unity Class</h3>
-                    <p>$45.000</p>
+                    <!-- <p>$45.000</p> -->
                 </div>
             </div>
             <button class="next">&#10095;</button>
         </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!--Footer-->
+    <footer>
+        <h2></h2>
+    </footer>
+
 </body>
 </html>
