Cambios en clase

--- a/index.html
+++ b/index.html
@@ -84,12 +84,14 @@
                     <!--<p>$550.000</p>-->
                 </div>
                 <div class="producto">
-                    <img src="img/Lenovo1.jpeg" alt="LENOVO - S2YTONY1LM">
+                    <a href="informacion/informComp.html">
+                        <img src="img/Lenovo1.jpeg" alt="LENOVO - S2YTONY1LM">
+                    </a>
                     <h3>LENOVO - S2YTONY1LM</h3>
                     <!-- <p>$520.000</p> -->
                 </div>
                 <div class="producto">
-                    <img src="img/adobe.png" alt="Adobe Plus">
+                    <img src="img/ad" alt="Adobe Plus">
                     <h3>Adobe Plus</h3>
                     <!-- <p>$75.000</p> -->
                 </div>
