--- a/informacion/informComp.html
+++ b/informacion/informComp.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Computadores</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/global.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -31,11 +31,11 @@
     </header>
     
     <nav class="menu">
-        <a href="../Computadores.html">Computadoras</a>
-        <a href="../tabletas.html">Tabletas <br> Gráficas</a>
-        <a href="../progFreeDesign.html">Programas <br> Gratuitos Diseño</a>
-        <a href="../programacion.html">Programación</a>
-        <a href="../licenciasDesign.html">Licencias de <br> Programas Diseño</a>
+        <a href="../mayoria/Computadores.html">Computadoras</a>
+        <a href="../mayoria/tabletas.html">Tabletas <br> Gráficas</a>
+        <a href="../mayoria/progFreeDesign.html">Programas <br> Gratuitos Diseño</a>
+        <a href="../mayoria/programacion.html">Programación</a>
+        <a href="../mayoria/licenciasDesign.html">Licencias de <br> Programas Diseño</a>
     </nav>
 
     <div class="container mt-4">
@@ -77,7 +77,7 @@
             <div class="col-md-7">
                 <div class="info-box">
                 <p>El Leenovo G2 ofrece un gran rendimiento para ejecutar sus aplicaciones más exigentes simultáneamente. Experimente una capacidad de respuesta rápida gracias a la tecnología líder en la industria. Enriquezca su experiencia de sonido con los altavoces Premium de 3Wx2 Harman, certificados con códec Realtek.</p>
-                <button class="btn-carrito">Agregar al carrito</button>
+                <button class="btn-carrito" onclick="window.open('https://www.lenovo.com/co/es/p/portatiles/thinkbook/thinkbook-serie/lenovo-thinkbook-14-g2-itl/xxtbxtmi400?orgRef=https%253A%252F%252Fwww.google.com%252F&cid=co:sem:pmax|se|google|pmax+amd||||21040024791|||pmax|mixed|com&gad_source=1&gclid=Cj0KCQjw4v6-BhDuARIsALprm33IhA24P5TDNkqYV5saBqt5su2uewoZDaNVk-SbcHGelvvuP35tKXYaAlJpEALw_wcB', '_blank')">Ir a la pagina</button>
                 </div>
             </div>            
         </div>
