--- a/mayoria/tabletas.html
+++ b/mayoria/tabletas.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MultiStand</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/global.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="logo-container">
-            <a href="index.html">
-                <img class="logo" src="img/aprendizaje-electronico.png" alt="Logo">
+            <a href="../index.html">
+                <img class="logo" src="../img/aprendizaje-electronico.png" alt="Logo">
             </a>
             <h1 class="Titulo">MULTI <br> STAND</h1>
         </div>
@@ -20,12 +20,8 @@
     
         <div class="iconos">
             <div class="icono">
-                <img class="ayuda" src="img/interrogatorio.png" alt="Ayuda">
+                <img class="ayuda" src="../img/interrogatorio.png" alt="Ayuda">
                 <h2 class="dudas">Ayuda</h2>
-            </div>
-            <div class="icono">
-                <img class="carro" src="img/carrito-de-compras.png" alt="Carrito">
-                <h2 class="micarrito">Mi carrito</h2>
             </div>
         </div>
     </header>
