--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <h3>WACOM Intuos Pro Mediana</h3>
                 </div>
                 <div class="producto col-12 col-md-6 col-lg-4">
-                    <a href="informacion/informComp.html">
+                    <a href="informacion/informCompLen_LOQ.html">
                         <img src="img/Lenovo1.jpeg" alt="LENOVO - S2YTONY1LM" class="img-fluid">
                     </a>
                     <h3>LENOVO - S2YTONY1LM</h3>
