Resolviendo conflicto en tabletas.html

--- a/mayoria/tabletas.html
+++ b/mayoria/tabletas.html
@@ -36,11 +36,11 @@
         <a href="licenciasDesign.html">Licencias de <br> Programas Diseño</a>
     </nav>
     
-    <!--<section class="productos">
-        <h1 class="tituloTabletas">💻 TABLETAS GRÁFICAS </h1>
-        <div class="d-flex justify-content-center align-items-center">
-            <a href="https://www.ktronix.com/tableta-grafica-wacom-intuos-pro-mediana-bluetooth-pth660/p/753218988270" target="_blank">
-            <img src="img/WACOMIntuosProMediana.png" alt="Wacom Tablet 1">
+
+    <section class="productos">
+        <div class="producto">
+            <img src="../img/Wacom_tablet.jpg" alt="Lenovo G2">
+
             <h2>Lenovo G2</h2>
         </div>
         
