Acceso a la categoria de programas gratuitos de diseño desde cualquier ventana del sitio, ya que anteriormente no funcionaba por el cambio de nombre del archivo

--- a/mayoria/SoftwareFreeDesign.html
+++ b/mayoria/SoftwareFreeDesign.html
@@ -34,7 +34,7 @@
     <nav class="menu">
         <a href="Computadores.html">Computadoras</a>
         <a href="tabletas.html">Tabletas <br> Gráficas</a>
-        <a href="progFreeDesign.html">Programas <br> Gratuitos Diseño</a>
+        <a href="SoftwareFreeDesign.html">Programas <br> Gratuitos Diseño</a>
         <a href="programacion.html">Programación</a>
         <a href="licenciasDesign.html">Licencias de <br> Programas Diseño</a>
     </nav>
