--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <nav class="menu">
         <a href="mayoria/Computadores.html">Computadoras</a>
         <a href="mayoria/tabletas.html">Tabletas <br> Gráficas</a>
-        <a href="mayoria/progFreeDesign.html">Programas <br> Gratuitos Diseño</a>
+        <a href="mayoria/SoftwareFreeDesign.html">Programas <br> Gratuitos Diseño</a>
         <a href="mayoria/programacion.html">Programación</a>
         <a href="mayoria/licenciasDesign.html">Licencias de <br> Programas Diseño</a>
         <!--bb8f439 (Separacion css y html)-->
