--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
                     <h3>LENOVO - S2YTONY1LM</h3>
                 </div>
                 <div class="producto col-12 col-md-6 col-lg-4">
-                    <h3>Adobe Plus</h3>
+                    <img src="img/Adobe_Flash.jpeg" alt="Adobe_Flash" class="img-fluid">
+                    <h3>Adobe Flash</h3>
                 </div>
                 <div class="producto col-12 col-md-6 col-lg-4">
                     <img src="img/blender.png" alt="Blender OP" class="img-fluid">
