--- a/mayoria/tabletas.html
+++ b/mayoria/tabletas.html
@@ -47,50 +47,45 @@
 
 
         <div class="producto">
-            <a href="https://www.ktronix.com/tableta-grafica-wacom-intuos-pro-mediana-bluetooth-pth660/p/753218988270"
-                target="_blank">
+            <a href="../informacion/informTablets/informTab1.html">
                 <img src="../img/WACOMIntuosProMediana.PNG" alt="WACOM Intuos Pro Mediana">
             </a>
             <h3>WACOM Intuos Pro Mediana</h3>
-        </div>
+        </div> <!--https://www.ktronix.com/tableta-grafica-wacom-intuos-pro-mediana-bluetooth-pth660/p/753218988270-->
 
         <div class="producto">
-            <a href="https://www.ktronix.com/tableta-grafica-wacom-one-by-negro-rojo/p/753218987143" target="_blank">
+            <a href="../informacion/informTablets/informTab2.html">
                 <img src="../Img_Tabletas/wacomOne.PNG" alt="WACOM One">
             </a>
-            <h3>WACOM One 15 pulgadas</h3>
+            <h3>WACOM One 15 pulgadas</h3> <!--https://www.ktronix.com/tableta-grafica-wacom-one-by-negro-rojo/p/753218987143-->
         </div>
 
         <div class="producto">
-            <a href="https://www.xp-pencolombia.com/xp-pen-g430s/"
-                target="_blank">
+            <a href="../informacion/informTablets/informTab3.html">
                 <img src="../Img_Tabletas/XP PENG430S.jpg" alt="XP-Pen G430s">
             </a>
-            <h3>XP-Pen G430s</h3>
+            <h3>XP-Pen G430s</h3> <!--https://www.xp-pencolombia.com/xp-pen-g430s/-->
         </div>
 
         <div class="producto">
-            <a href="https://articulo.mercadolibre.com.co/MCO-1943147638-huion-kamvas-pro-16--tableta-de-dibujo-con-pantal-_JM#polycard_client=search-nordic&position=10&search_layout=stack&type=item&tracking_id=dd85ca95-4738-4c3e-b3c9-923e037cb9d1"
-            target="_blank">
+            <a href="../informacion/informTablets/informTab4.html">
                 <img src="../Img_Tabletas/huion kamvas pro 16.jpg" alt="Huion Kamvas pro 16">
             </a>
-            <h3>Huion Kamvas pro 16</h3>
+            <h3>Huion Kamvas pro 16</h3> <!--https://articulo.mercadolibre.com.co/MCO-1943147638-huion-kamvas-pro-16--tableta-de-dibujo-con-pantal-_JM#polycard_client=search-nordic&position=10&search_layout=stack&type=item&tracking_id=dd85ca95-4738-4c3e-b3c9-923e037cb9d1-->
         </div>
 
         <div class="producto">
-            <a href="https://www.mercadolibre.com.co/xppen-tableta-dibujo-inalambrica-deco-pro-mw-2nd-tableta-9/p/MCO32167680?pdp_filters=item_id:MCO1541459297#polycard_client=recommendations_pdp-pads-up&reco_backend=pdp_pads_up_merge_rankent_v3_retsys&reco_client=pdp-pads-up&reco_item_pos=0&reco_backend_type=low_level&reco_id=63f52d05-4191-45f2-895f-6a8a9d7a1e82&wid=MCO1541459297&sid=recos&is_advertising=true&ad_domain=PDPDESKTOP_UP&ad_position=1&ad_click_id=M2IyMDdkMWMtMzAwYS00OTU1LTk5YzgtNTQ1OGRmY2NiY2Fj"
-            target="_blank">
+            <a href="../informacion/informTablets/informTab5.html">
                 <img src="../Img_Tabletas/XPEN Deco Pro Mw.JPG" alt="XPEN Deco Pro Mw">
             </a>
-            <h3>XPEN Deco Pro Mw</h3>
+            <h3>XPEN Deco Pro Mw</h3> <!--https://www.mercadolibre.com.co/xppen-tableta-dibujo-inalambrica-deco-pro-mw-2nd-tableta-9/p/MCO32167680?pdp_filters=item_id:MCO1541459297#polycard_client=recommendations_pdp-pads-up&reco_backend=pdp_pads_up_merge_rankent_v3_retsys&reco_client=pdp-pads-up&reco_item_pos=0&reco_backend_type=low_level&reco_id=63f52d05-4191-45f2-895f-6a8a9d7a1e82&wid=MCO1541459297&sid=recos&is_advertising=true&ad_domain=PDPDESKTOP_UP&ad_position=1&ad_click_id=M2IyMDdkMWMtMzAwYS00OTU1LTk5YzgtNTQ1OGRmY2NiY2Fj-->
         </div>
 
         <div class="producto">
-            <a href="https://www.mercadolibre.com.co/tableta-de-dibujo-ugee-s640-tableta-grafica-digital/p/MCO20545241?pdp_filters=item_id:MCO1559424911#is_advertising=true&searchVarZiation=MCO20545241&position=21&search_layout=stack&type=pad&tracking_id=46ba291e-d1c8-46fa-9c04-db49f7a196cf&is_advertising=true&ad_domain=VQCATCORE_LST&ad_position=21&ad_click_id=MmM0NmUzNjItNjM5MC00MzhjLTlmNmEtOWU5NzZiYjA2M2U2"
-            target="_blank">
+            <a href="../informacion/informTablets/informTab6.html">
                 <img src="../Img_Tabletas/Ugee S640.JPG" alt="Ugee S640">
             </a>
-            <h3>Ugee S640</h3>
+            <h3>Ugee S640</h3> <!--https://www.mercadolibre.com.co/tableta-de-dibujo-ugee-s640-tableta-grafica-digital/p/MCO20545241?pdp_filters=item_id:MCO1559424911#is_advertising=true&searchVarZiation=MCO20545241&position=21&search_layout=stack&type=pad&tracking_id=46ba291e-d1c8-46fa-9c04-db49f7a196cf&is_advertising=true&ad_domain=VQCATCORE_LST&ad_position=21&ad_click_id=MmM0NmUzNjItNjM5MC00MzhjLTlmNmEtOWU5NzZiYjA2M2U2-->
         </div>
     </section>
 
