Cambios en imagenes y mayoria de licencias

--- a/index.html
+++ b/index.html
@@ -92,8 +92,10 @@
                     <h3>LENOVO - S2YTONY1LM</h3>
                 </div>
                 <div class="producto col-12 col-md-6 col-lg-4">
-                    <img src="img/Adobe_Flash.jpeg" alt="Adobe_Flash" class="img-fluid">
-                    <h3>Adobe Flash</h3>
+                    <a href="https://www.adobe.com/co/products/illustrator.html" target="_blank">
+                        <img src="Img_Licencias/Ilustrator.avif" alt="Adobe_Flash" class="img-fluid">
+                    </a>
+                    <h3>Ilustrator</h3>
                 </div>
                 <div class="producto col-12 col-md-6 col-lg-4">
                     <img src="img/blender.png" alt="Blender OP" class="img-fluid">
