--- a/informacion/informLicen/informLicen1.html
+++ b/informacion/informLicen/informLicen1.html
@@ -50,13 +50,13 @@
                     <!-- Contenido del Carrusel -->
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="../../img/Wacom_tablet.jpg" class="d-block w-100 img-fluid" alt="Lenovo G2 - Vista Frontal">
+                            <img src="../../Img_Licencias/Office 2021.png" class="d-block w-100 img-fluid" alt="Lenovo G2 - Vista Frontal">
                         </div>
                         <div class="carousel-item">
-                            <img src="../../img/lenovo2.webp" class="d-block w-100 img-fluid" alt="Lenovo G2 - Lateral">
+                            <img src="../../Img_Licencias/Office 2021(2).png" class="d-block w-100 img-fluid" alt="Lenovo G2 - Lateral">
                         </div>
                         <div class="carousel-item">
-                            <img src="../../img/lenovo3.webp" class="d-block w-100 img-fluid" alt="Lenovo G2 - Posterior">
+                            <img src="../../Img_Licencias/Office 2021(3).png" class="d-block w-100 img-fluid" alt="Lenovo G2 - Posterior">
                         </div>
                     </div>
     
@@ -74,7 +74,7 @@
             <div class="col-md-7">
                 <div class="info-box">
                 <p>El Leenovo G2 ofrece un gran rendimiento para ejecutar sus aplicaciones más exigentes simultáneamente. Experimente una capacidad de respuesta rápida gracias a la tecnología líder en la industria. Enriquezca su experiencia de sonido con los altavoces Premium de 3Wx2 Harman, certificados con códec Realtek.</p>
-                <button class="btn-carrito" onclick="window.open('https://www.lenovo.com/co/es/p/portatiles/thinkbook/thinkbook-serie/lenovo-thinkbook-14-g2-itl/xxtbxtmi400?orgRef=https%253A%252F%252Fwww.google.com%252F&cid=co:sem:pmax|se|google|pmax+amd||||21040024791|||pmax|mixed|com&gad_source=1&gclid=Cj0KCQjw4v6-BhDuARIsALprm33IhA24P5TDNkqYV5saBqt5su2uewoZDaNVk-SbcHGelvvuP35tKXYaAlJpEALw_wcB', '_blank')">Ir a la pagina</button>
+                <button class="btn-carrito" onclick="window.open('https://programas.com.co/productos/office-2021-professional-plus-para-pc-no-expira/', '_blank')">Ir a la pagina</button>
                 </div>
             </div>            
         </div>
@@ -87,7 +87,8 @@
                 <h3 class="titulo-interes">Te interesaría</h3>
                 <div class="imagenes-interes">
                     <div class="imagen-cuadro">
-                        <img src="../../img/Wacom_tablet.jpg" class="img-fluid" alt="Producto relacionado 1">
+                        <a href="../../informacion/InformCompus/informComp2.html"></a>
+                        <img src="../../Img_Comp/Img2.webp" class="img-fluid" alt="Producto relacionado 1">
                     </div>
                     <div class="imagen-cuadro">
                         <img src="../../img/Unity1.webp" class="img-fluid" alt="Producto relacionado 2">
