Ajuste de la página ayuda

--- a/mayoria/SoftwareFreeDesign.html
+++ b/mayoria/SoftwareFreeDesign.html
@@ -47,42 +47,42 @@
 
 
         <div class="producto">
-            <a href="../informacion/informSoftw/informSoftw1.html">
+            <a href="https://www.blender.org/download" target="_blank">
                 <img class="progFreeDesign1" src="../Img_SoftwareFreeDesign/blender1 (1)_preview_rev_1.png" alt="Blender">
             </a>
             <h3>Blender</h3> <!--https://www.blender.org/download/-->
         </div>
 
         <div class="producto">
-            <a href="../informacion/informSoftw/informSoftw2.html">
+            <a href="https://krita.org/es/download/" target="_blank">
                 <img src="../Img_SoftwareFreeDesign/krita.png" alt="krita">
             </a>
             <h3>Krita</h3><!--https://krita.org/es/download/-->
         </div>
 
         <div class="producto">
-            <a href="../informacion/informSoftw/informSoftw3.html">
+            <a href="https://opentoonz.readthedocs.io/es/latest/installing_opentoonz.html" target="_blank">
                 <img src="../Img_SoftwareFreeDesign/opentoonz.png" alt="Opentoonz">
             </a>
             <h3>Opentoonz</h3><!--https://opentoonz.readthedocs.io/es/latest/installing_opentoonz.html-->
         </div>
 
         <div class="producto">
-            <a href="../informacion/informSoftw/informSoftw4.html">
+            <a href="https://inkscape.app/es/descargar/" target="_blank">
                 <img src="../Img_SoftwareFreeDesign/Inkscape.png" alt="Inkscape">
             </a>
             <h3>Inkscape</h3> <!--https://inkscape.app/es/descargar/-->
         </div>
 
         <div class="producto">
-            <a href="../informacion/informSoftw/informSoftw5.html">
+            <a href="https://www.openshot.org/es/download/" target="_blank">
                 <img src="../Img_SoftwareFreeDesign/openshot.png" alt="OpenShot Video Editor">
             </a>
             <h3>OpenShot Video Editor</h3> <!--https://www.openshot.org/es/download/-->
         </div>
 
         <div class="producto">
-            <a href="../informacion/informSoftw/informSoftw6.html">
+            <a href="https://www.darktable.org/install/" target="_blank">
                 <img src="../Img_SoftwareFreeDesign/Darktable.png" alt="Darktable">
             </a>
             <h3>Darktable</h3> <!--https://www.darktable.org/install/-->
