--- a/mayoria/tabletas.html
+++ b/mayoria/tabletas.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MultiStand</title>
+    <title>Tabletas Gráficas - MultiStand</title>
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/tabletas.css">
     <link rel="stylesheet" href="../css/mayoria.css">
