--- a/mayoria/Ayuda.html
+++ b/mayoria/Ayuda.html
@@ -3,12 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Repositorio del ingeniero multimedia"> <!--describe todas las paginas que estarán vinculadas-->
+    <meta name="Keywords" content="html, CSS, JSS, React"><!--son palabras claves con respecto a la pagina, así la identifican facilmente en el buscador-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MultiStand</title>
-    <link rel="stylesheet" href="../css/global.css">
-    <link rel="stylesheet" href="../css/ayuda.css">
-    <link rel="stylesheet" href="../css/mayoria.css">
     
+    <!--FAVICON-->
+    <link rel="icon" type="image/x-icon" href="img/bi-question-circle.svg">
+
     <!--BOOTSTRAP MAIN CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -189,7 +190,7 @@
 
             <br><br>
 
-            <h5 class="text-dark" target="_blank">Curso Domina Adobe Photoshop CC</h5>
+            <h5 class="text-dark" target="_blank">Curso Domina Adobe Photoshop CCb</h5>
             <a href="https://www.youtube.com/watch?v=4TQl8a8IYt4&list=PL1LZ9tjvKzYe1f3ksPqGHYMWhZoSOx9Sa" target="_blank"><strong>https://www.youtube.com/watch?v=4TQl8a8IYt4&list=PL1LZ9tjvKzYe1f3ksPqGHYMWhZoSOx9Sa</strong></a>
         </section>
     </section>
