--- a/informacion/InformCompus/informComp6.html
+++ b/informacion/InformCompus/informComp6.html
@@ -50,7 +50,7 @@
                     <!-- Contenido del Carrusel -->
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="../../img/Lenovo1.jpeg" class="d-block w-100 img-fluid" alt="Lenovo G2 - Vista Frontal">
+                            <img src="../../Img_Comp/Img6.webp" class="d-block w-100 img-fluid" alt="Lenovo G2 - Vista Frontal">
                         </div>
                         <div class="carousel-item">
                             <img src="../../img/lenovo2.webp" class="d-block w-100 img-fluid" alt="Lenovo G2 - Lateral">
@@ -73,8 +73,8 @@
             <!-- Columna Derecha - Información del Producto -->
             <div class="col-md-7">
                 <div class="info-box">
-                <p>El Leenovo G2 ofrece un gran rendimiento para ejecutar sus aplicaciones más exigentes simultáneamente. Experimente una capacidad de respuesta rápida gracias a la tecnología líder en la industria. Enriquezca su experiencia de sonido con los altavoces Premium de 3Wx2 Harman, certificados con códec Realtek.</p>
-                <button class="btn-carrito" onclick="window.open('https://www.lenovo.com/co/es/p/portatiles/thinkbook/thinkbook-serie/lenovo-thinkbook-14-g2-itl/xxtbxtmi400?orgRef=https%253A%252F%252Fwww.google.com%252F&cid=co:sem:pmax|se|google|pmax+amd||||21040024791|||pmax|mixed|com&gad_source=1&gclid=Cj0KCQjw4v6-BhDuARIsALprm33IhA24P5TDNkqYV5saBqt5su2uewoZDaNVk-SbcHGelvvuP35tKXYaAlJpEALw_wcB', '_blank')">Ir a la pagina</button>
+                <p>La ASUS Vivobook Go 15 es liviana, es compacta, diseñada para que seas productivo y te mantengas entretenido donde quiera que vayas. Con su bisagra plana de 180°, el protector físico de la cámara web y un montón de características de diseño bien pensadas, incluida una hermosa pantalla con bordes ultradelgados,</p>
+                <button class="btn-carrito" onclick="window.open('https://www.alkosto.com/computador-portatil-asus-vivobook-go-156-pulgadas-e1504fa/p/4711387322925?fuente=google&medio=cpc&campaign=AK_COL_MAX_PEF_CPC_AON_COMP_Asus_Ago21_EXP_AGO&keyword=&gad_source=4&gclid=Cj0KCQjwhYS_BhD2ARIsAJTMMQbpcubMPG1KSMJqdBklDo997_sZsKmQ40qnTqw_jcbjnZQiKlGpzHoaAsfcEALw_wcB', '_blank')">Ir a la pagina</button>
                 </div>
             </div>            
         </div>
