--- a/informacion/InformCompus/informComp1.html
+++ b/informacion/InformCompus/informComp1.html
@@ -50,13 +50,13 @@
                     <!-- Contenido del Carrusel -->
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="../../img/Lenovo1.jpeg" class="d-block w-100 img-fluid" alt="Lenovo G2 - Vista Frontal">
+                            <img src="../../Img_Comp/Img1.webp" class="d-block w-100 img-fluid" alt="Lenovo G2 - Vista Frontal">
                         </div>
                         <div class="carousel-item">
-                            <img src="../../img/lenovo2.webp" class="d-block w-100 img-fluid" alt="Lenovo G2 - Lateral">
+                            <img src="../../Img_Comp/Img1(2).webp" class="d-block w-100 img-fluid" alt="Lenovo G2 - Lateral">
                         </div>
                         <div class="carousel-item">
-                            <img src="../../img/lenovo3.webp" class="d-block w-100 img-fluid" alt="Lenovo G2 - Posterior">
+                            <img src="../../Img_Comp/Img1(3).webp" class="d-block w-100 img-fluid" alt="Lenovo G2 - Posterior">
                         </div>
                     </div>
     
@@ -73,8 +73,12 @@
             <!-- Columna Derecha - Información del Producto -->
             <div class="col-md-7">
                 <div class="info-box">
-                <p>El Leenovo G2 ofrece un gran rendimiento para ejecutar sus aplicaciones más exigentes simultáneamente. Experimente una capacidad de respuesta rápida gracias a la tecnología líder en la industria. Enriquezca su experiencia de sonido con los altavoces Premium de 3Wx2 Harman, certificados con códec Realtek.</p>
-                <button class="btn-carrito" onclick="window.open('https://www.lenovo.com/co/es/p/portatiles/thinkbook/thinkbook-serie/lenovo-thinkbook-14-g2-itl/xxtbxtmi400?orgRef=https%253A%252F%252Fwww.google.com%252F&cid=co:sem:pmax|se|google|pmax+amd||||21040024791|||pmax|mixed|com&gad_source=1&gclid=Cj0KCQjw4v6-BhDuARIsALprm33IhA24P5TDNkqYV5saBqt5su2uewoZDaNVk-SbcHGelvvuP35tKXYaAlJpEALw_wcB', '_blank')">Ir a la pagina</button>
+                <p>
+                    Sumérgete en el mundo del gaming con la Torre Gamer Rgb AMD Ryzen 5 5600G. 
+                    Con un potente procesador AMD Ryzen 5 5600G y 16 GB de RAM, disfrutarás de un rendimiento excepcional en tus juegos favoritos. 
+                    Además, cuenta con un disco duro de 512 GB para almacenar todos tus archivos y juegos sin preocupaciones.
+                </p>
+                <button class="btn-carrito" onclick="window.open('https://articulo.mercadolibre.com.co/MCO-875977147-pc-gamer-rgb-ryzen-5-5600g-16gb-ssd-500-monitor-22-pd-_JM?matt_tool=87585337&matt_word=&matt_source=google&matt_campaign_id=22126928786&matt_ad_group_id=173140660763&matt_match_type=&matt_network=g&matt_device=c&matt_creative=729836849947&matt_keyword=&matt_ad_position=&matt_ad_type=pla&matt_merchant_id=217585675&matt_product_id=MCO875977147&matt_product_partition_id=2389840739979&matt_target_id=pla-2389840739979&cq_src=google_ads&cq_cmp=22126928786&cq_net=g&cq_plt=gp&cq_med=pla&gad_source=4&gclid=Cj0KCQjwhYS_BhD2ARIsAJTMMQb78Owwe_rMqNHPjoiHy9b4V4IMNj5huAtJ0vBtiz4cCFJ1Do5k8XAaAnsjEALw_wcB', '_blank')">Ir a la pagina</button>
                 </div>
             </div>            
         </div>
