--- a/informacion/InformCompus/informComp2.html
+++ b/informacion/InformCompus/informComp2.html
@@ -50,13 +50,13 @@
                     <!-- Contenido del Carrusel -->
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="../../img/Lenovo1.jpeg" class="d-block w-100 img-fluid" alt="Lenovo G2 - Vista Frontal">
+                            <img src="../../Img_Comp/Img2.webp" class="d-block w-100 img-fluid" alt="Lenovo G2 - Vista Frontal">
                         </div>
                         <div class="carousel-item">
-                            <img src="../../img/lenovo2.webp" class="d-block w-100 img-fluid" alt="Lenovo G2 - Lateral">
+                            <img src="../../Img_Comp/Img2(2).webp" class="d-block w-100 img-fluid" alt="Lenovo G2 - Lateral">
                         </div>
                         <div class="carousel-item">
-                            <img src="../../img/lenovo3.webp" class="d-block w-100 img-fluid" alt="Lenovo G2 - Posterior">
+                            <img src="../../Img_Comp/Img2(3).webp" class="d-block w-100 img-fluid" alt="Lenovo G2 - Posterior">
                         </div>
                     </div>
     
@@ -73,8 +73,13 @@
             <!-- Columna Derecha - Información del Producto -->
             <div class="col-md-7">
                 <div class="info-box">
-                <p>El Leenovo G2 ofrece un gran rendimiento para ejecutar sus aplicaciones más exigentes simultáneamente. Experimente una capacidad de respuesta rápida gracias a la tecnología líder en la industria. Enriquezca su experiencia de sonido con los altavoces Premium de 3Wx2 Harman, certificados con códec Realtek.</p>
-                <button class="btn-carrito" onclick="window.open('https://www.lenovo.com/co/es/p/portatiles/thinkbook/thinkbook-serie/lenovo-thinkbook-14-g2-itl/xxtbxtmi400?orgRef=https%253A%252F%252Fwww.google.com%252F&cid=co:sem:pmax|se|google|pmax+amd||||21040024791|||pmax|mixed|com&gad_source=1&gclid=Cj0KCQjw4v6-BhDuARIsALprm33IhA24P5TDNkqYV5saBqt5su2uewoZDaNVk-SbcHGelvvuP35tKXYaAlJpEALw_wcB', '_blank')">Ir a la pagina</button>
+                <p>COMPUPUNTO - Tu punto de encuentro con la tecnología! <br>
+
+                    Tenemos excelente reputación y llevamos más de 10 años vendiendo en MercadoLibre
+                    Ubicación: a dos cuadras de Unilago sector de El Lago en Chapinero - Bogotá
+                    Horarios: lunes a viernes de 10:00 am a 5:00 pm y sábados de 11:00 a 5:00 pm
+                    </p>
+                <button class="btn-carrito" onclick="window.open('https://articulo.mercadolibre.com.co/MCO-2757651824-torre-cpu-gamer-ryzen-7-5700g-512gb-ssd-vega-8-hdmi-32gb-pc-_JM#polycard_client=recommendations_vip-v2p&reco_backend=ranker_retrieval_system_org&reco_model=rk_ent_v3_retsys_org&reco_client=vip-v2p&reco_item_pos=1&reco_backend_type=low_level&reco_id=df9ac02b-c195-4b76-9dd4-2d77957244b3&wid=MCO2757651824&sid=recos', '_blank')">Ir a la pagina</button>
                 </div>
             </div>            
         </div>
