--- a/informacion/InformCompus/informComp3.html
+++ b/informacion/InformCompus/informComp3.html
@@ -50,7 +50,7 @@
                     <!-- Contenido del Carrusel -->
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="../../img/Lenovo1.jpeg" class="d-block w-100 img-fluid" alt="Lenovo G2 - Vista Frontal">
+                            <img src="../../Img_Comp/Img3.webp" class="d-block w-100 img-fluid" alt="Lenovo G2 - Vista Frontal">
                         </div>
                         <div class="carousel-item">
                             <img src="../../img/lenovo2.webp" class="d-block w-100 img-fluid" alt="Lenovo G2 - Lateral">
@@ -73,8 +73,8 @@
             <!-- Columna Derecha - Información del Producto -->
             <div class="col-md-7">
                 <div class="info-box">
-                <p>El Leenovo G2 ofrece un gran rendimiento para ejecutar sus aplicaciones más exigentes simultáneamente. Experimente una capacidad de respuesta rápida gracias a la tecnología líder en la industria. Enriquezca su experiencia de sonido con los altavoces Premium de 3Wx2 Harman, certificados con códec Realtek.</p>
-                <button class="btn-carrito" onclick="window.open('https://www.lenovo.com/co/es/p/portatiles/thinkbook/thinkbook-serie/lenovo-thinkbook-14-g2-itl/xxtbxtmi400?orgRef=https%253A%252F%252Fwww.google.com%252F&cid=co:sem:pmax|se|google|pmax+amd||||21040024791|||pmax|mixed|com&gad_source=1&gclid=Cj0KCQjw4v6-BhDuARIsALprm33IhA24P5TDNkqYV5saBqt5su2uewoZDaNVk-SbcHGelvvuP35tKXYaAlJpEALw_wcB', '_blank')">Ir a la pagina</button>
+                <p>La ASUS TUF Gaming A15 es un resistente portátil gamer que te entregará todo lo que necesitas para ganar la batalla, gracias a su pantalla de alta velocidad, sistema térmico mejorado y batería de alta duración que te dan la vitalidad necesaria para plantar cara a cualquier situación. </p>
+                <button class="btn-carrito" onclick="window.open('https://www.ktronix.com/computador-portatil-gamer-asus-tuf-156-pulgadas-fa506ncr/p/4711387567050?utm_source=google&utm_medium=organic&utm_campaign=Shopping-organico', '_blank')">Ir a la pagina</button>
                 </div>
             </div>            
         </div>
