--- a/informacion/InformCompus/informComp5.html
+++ b/informacion/InformCompus/informComp5.html
@@ -50,7 +50,7 @@
                     <!-- Contenido del Carrusel -->
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="../../img/Lenovo1.jpeg" class="d-block w-100 img-fluid" alt="Lenovo G2 - Vista Frontal">
+                            <img src="../../Img_Comp/Img5.webp" class="d-block w-100 img-fluid" alt="Lenovo G2 - Vista Frontal">
                         </div>
                         <div class="carousel-item">
                             <img src="../../img/lenovo2.webp" class="d-block w-100 img-fluid" alt="Lenovo G2 - Lateral">
@@ -73,8 +73,10 @@
             <!-- Columna Derecha - Información del Producto -->
             <div class="col-md-7">
                 <div class="info-box">
-                <p>El Leenovo G2 ofrece un gran rendimiento para ejecutar sus aplicaciones más exigentes simultáneamente. Experimente una capacidad de respuesta rápida gracias a la tecnología líder en la industria. Enriquezca su experiencia de sonido con los altavoces Premium de 3Wx2 Harman, certificados con códec Realtek.</p>
-                <button class="btn-carrito" onclick="window.open('https://www.lenovo.com/co/es/p/portatiles/thinkbook/thinkbook-serie/lenovo-thinkbook-14-g2-itl/xxtbxtmi400?orgRef=https%253A%252F%252Fwww.google.com%252F&cid=co:sem:pmax|se|google|pmax+amd||||21040024791|||pmax|mixed|com&gad_source=1&gclid=Cj0KCQjw4v6-BhDuARIsALprm33IhA24P5TDNkqYV5saBqt5su2uewoZDaNVk-SbcHGelvvuP35tKXYaAlJpEALw_wcB', '_blank')">Ir a la pagina</button>
+                <p>Tienda virtual y física lo que garantiza que nuestra organización provee artículos tecnológicos de alta calidad avalada por nuestros clientes y usuarios de MercadoLibre
+
+                    TORRE 6503BK, FUENTE 780W (REAL 400W), BOARD H610M, PROCESADOR INTEL CORE I5 12400, GRAFICOS INTEGRADOS INTEL UHD 730, RAM DDR4 16GB 2666MHZ 1X16GB (Ó 2X8GB), DISCO SOLIDO SSD 512GB, MONITOR LED 22" FHD 100HZ, TECLADO Y MOUSE USB</p>
+                <button class="btn-carrito" onclick="window.open('https://articulo.mercadolibre.com.co/MCO-1405946415-computador-intel-core-i5-12400-uhd-730-512gb-16gb-led-22-pc-_JM?matt_tool=19390127&utm_source=google_shopping&utm_medium=organic', '_blank')">Ir a la pagina</button>
                 </div>
             </div>            
         </div>
