Actualizacion de Programacion
Se arreglaron cositas :)

--- a/mayoria/programacion.html
+++ b/mayoria/programacion.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/Programacion.css">
+    <link rel="stylesheet" href="../css/Programacion.css">
+    <link rel="icon" href="../img/Icono para la pestaña.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Programacion</title>
 </head>
 <body>
     <header>
         <div class="logo-container d-flex align-items-center">
-            <a href="index.html">
-                <img class="logo" src="img/aprendizaje-electronico.png" alt="Logo">
+            <a href="/index.html">
+                <img class="logo" src="../img/aprendizaje-electronico.png" alt="Logo">
             </a>
             <h1 class="Titulo">MULTI <br> STAND</h1>
         </div>
@@ -23,7 +24,7 @@
     
         <div class="HelpIcono d-flex">
             <div class="d-flex align-items-center gap-2">
-                <img class="AyudaImg" src="img/interrogatorio.png" alt="Ayuda">
+                <img class="AyudaImg" src="../img/interrogatorio.png" alt="Ayuda">
                 <h2 class="AyudaText">Ayuda</h2>
             </div>
         </div>
@@ -43,7 +44,7 @@
                         <a class="nav-link" href="tabletas.html">Tabletas Gráficas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="progFreeDesign.html">Programas Gratuitos de Diseño</a>
+                        <a class="nav-link" href="SoftwareFreeDesign.html">Programas Gratuitos de Diseño</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="programacion.html">Programación</a>
@@ -56,13 +57,13 @@
         </div>
     </nav>
 
-    <main class="ProgramacionSoftwaresContainer mt-5">
+    <main class="ProgramacionSoftwaresContainer mt-4">
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <!-- Card VSC -->
             <div class="col">
                 <section class="VSC-Card">
                     <div class="card text-center p-3 ms-5">
-                        <img class="VSC-Img mx-auto"   src="IMG LOGOS PROGRAMACION/Logo_de_Visual_Studio_Code.png" alt="VSC-Logo" >
+                        <img class="VSC-Img mx-auto"   src="../Img_Programacion/Logo_de_Visual_Studio_Code.png" alt="VSC-Logo" >
                         <div class="card-body">
                         <h5 class="card-title">Visual Studio Code</h5>
                         <a href="https://code.visualstudio.com/" target="_blank"  class="btn btn-primary">Descargar</a>
@@ -74,7 +75,7 @@
             <div class="col">
                 <section class="Eclipse-Card">
                     <div class="card text-center p-3">
-                        <img class="Eclipse-Img mx-auto"   src="IMG LOGOS PROGRAMACION/Eclipse_Logo.webp" alt="Eclipse-Logo" >
+                        <img class="Eclipse-Img mx-auto"   src="../Img_Programacion/Eclipse_Logo.webp" alt="Eclipse-Logo" >
                         <div class="card-body">
                         <h5 class="card-title">Eclipse IDE</h5>
                         <a href="https://eclipseide.org/" target="_blank"  class="btn btn-primary">Descargar</a>
@@ -86,7 +87,7 @@
             <div class="col">
                 <section class="Netbeans-Card">
                     <div class="card text-center p-3 me-5">
-                        <img class="Netbeans-Img mx-auto"   src="IMG LOGOS PROGRAMACION/Apache_NetBeans_Logo.png" alt="Netbeans-Logo" >
+                        <img class="Netbeans-Img mx-auto"   src="../Img_Programacion/Apache_NetBeans_Logo.png" alt="Netbeans-Logo" >
                         <div class="card-body">
                         <h5 class="card-title">Apache Netbeans</h5>
                         <a href="https://netbeans.apache.org/front/main/index.html" target="_blank"  class="btn btn-primary">Descargar</a>
@@ -98,7 +99,7 @@
             <div class="col">
                 <section class="SublimeText-Card">
                     <div class="card text-center p-3 ms-5">
-                        <img class="SublimeText-Img mx-auto"   src="IMG LOGOS PROGRAMACION/Sublime_Text_logo.png" alt="SublimeText-Logo" >
+                        <img class="SublimeText-Img mx-auto"   src="../Img_Programacion/Sublime_Text_logo.png" alt="SublimeText-Logo" >
                         <div class="card-body">
                         <h5 class="card-title">Sublime Text</h5>
                         <a href="https://www.sublimetext.com/" target="_blank"  class="btn btn-primary">Descargar</a>
@@ -110,7 +111,7 @@
             <div class="col">
                 <section class="Atom-Card">
                     <div class="card text-center p-3">
-                        <img class="VSC-Img mx-auto"   src="IMG LOGOS PROGRAMACION/Atom-logo.png" alt="Atom-Logo" >
+                        <img class="VSC-Img mx-auto"   src="../Img_Programacion/Atom-logo.png" alt="Atom-Logo" >
                         <div class="card-body">
                         <h5 class="card-title">Atom IDE</h5>
                         <a href="https://atom-editor.cc/" target="_blank"  class="btn btn-primary">Descargar</a>
@@ -122,7 +123,7 @@
             <div class="col">
                 <section class="Brackets-Card">
                     <div class="card text-center p-3 me-5">
-                        <img class="VSC-Img mx-auto"   src="IMG LOGOS PROGRAMACION/Brackets_Logo.png" alt="Brackets-Logo" >
+                        <img class="VSC-Img mx-auto"   src="../Img_Programacion/Brackets_Logo.png" alt="Brackets-Logo" >
                         <div class="card-body">
                         <h5 class="card-title">Brackets IDE</h5>
                         <a href="https://brackets.io/" target="_blank"  class="btn btn-primary">Descargar</a>
@@ -133,6 +134,7 @@
         </div>   
     </main>
 
+    
    <!-- Footer -->
    <footer class="custom-footer">
         <div class="nombresIntegrantes">
@@ -147,7 +149,7 @@
 
         <div class="info">
             <h1 class="TituloFooter">MULTI STAND</h1>
-            <img class="logoFooter" src="img/aprendizaje-electronico.png" alt="logoMultiStand">
+            <img class="logoFooter" src="../img/aprendizaje-electronico.png" alt="logoMultiStand">
             <p class="textoFooter2">Repositorio del Ingeniero Multimedia</p>
          </div>
 </footer>
