--- a/mayoria/tabletas.html
+++ b/mayoria/tabletas.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabletas Gráficas - MultiStand</title>
+    <link rel="icon" href="img/Icono para la pestaña.png">
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/tabletas.css">
     <link rel="stylesheet" href="../css/mayoria.css">
