--- a/mayoria/SoftwareFreeDesign.html
+++ b/mayoria/SoftwareFreeDesign.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MultiStand</title>
+    <title>MultiStand</title
+    <link rel="icon" href="img/Icono para la pestaña.png">
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/softwareFreeDesign.css">
     <link rel="stylesheet" href="../css/mayoria.css">
