--- a/mayoria/Ayuda.html
+++ b/mayoria/Ayuda.html
@@ -7,8 +7,7 @@
     <meta name="Keywords" content="html, CSS, JSS, React"><!--son palabras claves con respecto a la pagina, así la identifican facilmente en el buscador-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <!--FAVICON-->
-    <link rel="icon" type="image/x-icon" href="img/bi-question-circle.svg">
+    <link rel="icon" href="img/Icono para la pestaña.png">
 
     <!--BOOTSTRAP MAIN CSS-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
