--- a/mayoria/licenciasDesign.html
+++ b/mayoria/licenciasDesign.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MultiStand</title>
-    <link rel="icon" href="img/Icono para la pestaña.png">
+    <link rel="icon" href="../img/Icono para la pestaña.png">
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/mayoria.css">
     <link rel="stylesheet" href="../css/tabletas.css">
