--- a/mayoria/programacion.html
+++ b/mayoria/programacion.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="logo-container d-flex align-items-center">
-            <a href="/index.html">
+            <a href="../index.html">
                 <img class="logo" src="../img/aprendizaje-electronico.png" alt="Logo">
             </a>
             <h1 class="Titulo">MULTI <br> STAND</h1>
