--- a/informacion/InformCompus/informComp1.html
+++ b/informacion/InformCompus/informComp1.html
@@ -34,6 +34,10 @@
         <a href="../../mayoria/programacion.html">Programación</a>
         <a href="../../mayoria/licenciasDesign.html">Licencias de <br> Programas Diseño</a>
     </nav>
+    <!--Boton de Volver-->
+    <div class="container d-flex justify-content-end align-items-center pt-2" >
+        <button class="btn btn-primary text-white" onclick="window.history.back()">Volver</button>
+    </div>
 
     <div class="container mt-4">
         <div class="row">
@@ -87,14 +91,14 @@
     <div class="container mt-4">
         <div class="row">
             <!-- Columna Izquierda - "Te interesaría" -->
-            <div class="col-md-5">
+            <div class="col-md-5 pb-4">
                 <h3 class="titulo-interes">Te interesaría</h3>
                 <div class="imagenes-interes">
                     <div class="imagen-cuadro">
                         <img src="../../img/Wacom_tablet.jpg" class="img-fluid" alt="Producto relacionado 1">
                     </div>
-                    <div class="imagen-cuadro">
-                        <img src="../../img/Unity1.webp" class="img-fluid" alt="Producto relacionado 2">
+                    <div class="imagen-cuadro ">
+                        <img src="../../img/Unity1.webp" class="img-fluid pt-5" alt="Producto relacionado 2">
                     </div>
                 </div>
             </div>
