--- a/informacion/InformCompus/informComp6.html
+++ b/informacion/InformCompus/informComp6.html
@@ -35,6 +35,11 @@
         <a href="../../mayoria/licenciasDesign.html">Licencias de <br> Programas Diseño</a>
     </nav>
 
+    <!--Boton de Volver-->
+    <div class="container d-flex justify-content-end align-items-center pt-2" >
+        <button class="btn btn-primary text-white" onclick="window.history.back()">Volver</button>
+    </div>
+
     <div class="container mt-4">
         <div class="row">
             <!-- Columna Izquierda - Carrusel -->
@@ -90,7 +95,7 @@
                         <img src="../../img/Wacom_tablet.jpg" class="img-fluid" alt="Producto relacionado 1">
                     </div>
                     <div class="imagen-cuadro">
-                        <img src="../../img/Unity1.webp" class="img-fluid" alt="Producto relacionado 2">
+                        <img src="../../img/Unity1.webp" class="img-fluid pt-5" alt="Producto relacionado 2">
                     </div>
                 </div>
             </div>
