--- a/informacion/informSoftw/informSoftw2.html
+++ b/informacion/informSoftw/informSoftw2.html
@@ -30,7 +30,7 @@
     <nav class="menu">
         <a href="../../mayoria/Computadores.html">Computadoras</a>
         <a href="../../mayoria/tabletas.html">Tabletas <br> Gráficas</a>
-        <a href="../../mayoria/progFreeDesign.html">Programas <br> Gratuitos Diseño</a>
+        <a href="../../mayoria/SoftwareFreeDesign.html">Programas <br> Gratuitos Diseño</a>
         <a href="../../mayoria/programacion.html">Programación</a>
         <a href="../../mayoria/licenciasDesign.html">Licencias de <br> Programas Diseño</a>
     </nav>
