--- a/informacion/informTablets/informTab6.html
+++ b/informacion/informTablets/informTab6.html
@@ -30,10 +30,15 @@
     <nav class="menu">
         <a href="../../mayoria/Computadores.html">Computadoras</a>
         <a href="../../mayoria/tabletas.html">Tabletas <br> Gráficas</a>
-        <a href="../../mayoria/progFreeDesign.html">Programas <br> Gratuitos Diseño</a>
+        <a href="../../mayoria/SoftwareFreeDesign.html">Programas <br> Gratuitos Diseño</a>
         <a href="../../mayoria/programacion.html">Programación</a>
         <a href="../../mayoria/licenciasDesign.html">Licencias de <br> Programas Diseño</a>
     </nav>
+
+    <!--Boton de Volver-->
+    <div class="container d-flex justify-content-end align-items-center pt-2" >
+        <button class="btn btn-primary text-white" onclick="window.history.back()">Volver</button>
+    </div>
 
     <div class="container mt-4">
         <div class="row">
