--- a/mayoria/Ayuda.html
+++ b/mayoria/Ayuda.html
@@ -7,6 +7,7 @@
     <meta name="Keywords" content="html, CSS, JSS, React"><!--son palabras claves con respecto a la pagina, así la identifican facilmente en el buscador-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="icon" href="img/Icono para la pestaña.png">
 
     <!--BOOTSTRAP MAIN CSS-->
@@ -25,7 +26,12 @@
             <h1 class="Titulo">MULTI <br> STAND</h1>
         </div>
 
-        <input class="busqueda" type="text" placeholder="Buscar productos...">
+        <div class="search-container">
+            <input type="text" class="busqueda" placeholder="Buscar...">
+            <button class="search-button">
+              <i class="bi bi-search"></i>
+            </button>
+          </div>
 
         <div class="iconos">
             <div class="icono">
