--- a/informacion/InformCompus/informComp6.html
+++ b/informacion/InformCompus/informComp6.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Computadores</title>
+    <link rel="icon" href="../../img/Icono para la pestaña.png">
     <link rel="stylesheet" href="../../css/global.css">
     <link rel="stylesheet" href="../../css/inforación.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -17,7 +19,12 @@
             <h1 class="Titulo">MULTI <br> STAND</h1>
         </div>
     
-        <input class="busqueda" type="text" placeholder="Buscar productos...">
+        <div class="search-container">
+            <input type="text" class="busqueda" placeholder="Buscar...">
+            <button class="search-button">
+              <i class="bi bi-search"></i>
+            </button>
+          </div>
     
         <div class="iconos">
             <div class="icono">
