--- a/informacion/informLicen/informLicen4.html
+++ b/informacion/informLicen/informLicen4.html
@@ -17,7 +17,12 @@
             <h1 class="Titulo">MULTI <br> STAND</h1>
         </div>
     
-        <input class="busqueda" type="text" placeholder="Buscar productos...">
+        <div class="search-container">
+            <input type="text" class="busqueda" placeholder="Buscar...">
+            <button class="search-button">
+              <i class="bi bi-search"></i>
+            </button>
+          </div>
     
         <div class="iconos">
             <div class="icono">
