--- a/mayoria/Computadores.html
+++ b/mayoria/Computadores.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="img/Icono para la pestaña.png">
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/mayoria.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/tabletas.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -19,7 +20,12 @@
             <h1 class="Titulo">MULTI <br> STAND</h1>
         </div>
     
-        <input class="busqueda" type="text" placeholder="Buscar productos...">
+        <div class="search-container">
+            <input type="text" class="busqueda" placeholder="Buscar...">
+            <button class="search-button">
+              <i class="bi bi-search"></i>
+            </button>
+          </div>
     
         <div class="iconos">
             <div class="icono">
