--- a/mayoria/SoftwareFreeDesign.html
+++ b/mayoria/SoftwareFreeDesign.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MultiStand</title>
     <link rel="icon" href="../img/Icono para la pestaña.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/global.css">
     <link rel="stylesheet" href="../css/softwareFreeDesign.css">
     <link rel="stylesheet" href="../css/mayoria.css">
@@ -22,7 +23,12 @@
             <h1 class="Titulo">MULTI <br> STAND</h1>
         </div>
 
-        <input class="busqueda" type="text" placeholder="Buscar productos...">
+        <div class="search-container">
+            <input type="text" class="busqueda" placeholder="Buscar...">
+            <button class="search-button">
+              <i class="bi bi-search"></i>
+            </button>
+          </div>
 
         <div class="iconos">
             <div class="icono">
