Última modificación, ya me voy a dormir bye
By Juan :) Pd: Arreglé algunas cosas y añadí otro icono. Búsquenlo jaja ha ya me acorde tmb le puse pa que se agrenden los iconos de volver al menu y de ayuda cuando se le vaya a hacer click.

--- a/informacion/InformCompus/informComp1.html
+++ b/informacion/InformCompus/informComp1.html
@@ -28,7 +28,9 @@
     
         <div class="iconos">
             <div class="icono">
-                <img class="ayuda" src="../../img/interrogatorio.png" alt="Ayuda">
+                <a href="../../mayoria/Ayuda.html">
+                    <img class="ayuda" src="../../img/interrogatorio.png" alt="Ayuda">
+                </a>
                 <h2 class="dudas">Ayuda</h2>
             </div>
         </div>
@@ -43,7 +45,7 @@
     </nav>
     <!--Boton de Volver-->
     <div class="container d-flex justify-content-end align-items-center pt-2" >
-        <button class="btn btn-primary text-white" onclick="window.history.back()">Volver</button>
+        <button class="btn btn-primary text-white" onclick="window.history.back()"><i class="bi bi-arrow-left"></i></button>
     </div>
 
     <div class="container mt-4">
