--- a/mayoria/SoftwareFreeDesign.html
+++ b/mayoria/SoftwareFreeDesign.html
@@ -32,7 +32,9 @@
 
         <div class="iconos">
             <div class="icono">
-                <img class="ayuda" src="../img/interrogatorio.png" alt="Ayuda">
+                <a href="mayoria/Ayuda.html">
+                    <img class="ayuda" src="../img/interrogatorio.png" alt="Ayuda">
+                </a>
                 <h2 class="dudas">Ayuda</h2>
             </div>
         </div>
