--- a/mayoria/programacion.html
+++ b/mayoria/programacion.html
@@ -30,7 +30,9 @@
     
         <div class="HelpIcono d-flex">
             <div class="d-flex align-items-center gap-2">
-                <img class="AyudaImg" src="../img/interrogatorio.png" alt="Ayuda">
+                <a href="mayoria/Ayuda.html">
+                    <img class="AyudaImg" src="../img/interrogatorio.png" alt="Ayuda">
+                </a>
                 <h2 class="AyudaText">Ayuda</h2>
             </div>
         </div>
