--- a/informacion/informTablets/informTab5.html
+++ b/informacion/informTablets/informTab5.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="../../img/Icono para la pestaña.png">
     <link rel="stylesheet" href="../../css/global.css">
     <link rel="stylesheet" href="../../css/inforación.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
@@ -18,11 +19,18 @@
             <h1 class="Titulo">MULTI <br> STAND</h1>
         </div>
     
-        <input class="busqueda" type="text" placeholder="Buscar productos...">
+        <div class="search-container">
+            <input type="text" class="busqueda" placeholder="Buscar...">
+            <button class="search-button">
+              <i class="bi bi-search"></i>
+            </button>
+          </div>
     
         <div class="iconos">
             <div class="icono">
-                <img class="ayuda" src="../../img/interrogatorio.png" alt="Ayuda">
+                <a href="../../mayoria/Ayuda.html">
+                    <img class="ayuda" src="../../img/interrogatorio.png" alt="Ayuda">
+                </a>
                 <h2 class="dudas">Ayuda</h2>
             </div>
         </div>
@@ -38,7 +46,7 @@
 
     <!--Boton de Volver-->
     <div class="container d-flex justify-content-end align-items-center pt-2" >
-        <button class="btn btn-primary text-white" onclick="window.history.back()">Volver</button>
+        <button class="btn btn-primary text-white" onclick="window.history.back()"><i class="bi bi-arrow-left"></i></button>
     </div>
 
     <div class="container mt-4">
