--- a/mayoria/licenciasDesign.html
+++ b/mayoria/licenciasDesign.html
@@ -29,7 +29,9 @@
     
         <div class="iconos">
             <div class="icono">
-                <img class="ayuda" src="../img/interrogatorio.png" alt="Ayuda">
+                <a href="mayoria/Ayuda.html">
+                    <img class="ayuda" src="../img/interrogatorio.png" alt="Ayuda">
+                </a>
                 <h2 class="dudas">Ayuda</h2>
             </div>
         </div>
