Ultimo retoques pa irme a dormir tranquilo Bora
Aqui está Juan  :) dando os toques finais na página. Corrigi algumas informações e espaços. Bora lá equipe, vamos lá para aquele 5.0

--- a/mayoria/programacion.html
+++ b/mayoria/programacion.html
@@ -32,14 +32,14 @@
     
         <div class="HelpIcono d-flex">
             <div class="d-flex align-items-center gap-2">
-                <a href="mayoria/Ayuda.html">
+                <a href="../mayoria/Ayuda.html">
                     <img class="AyudaImg" src="../img/interrogatorio.png" alt="Ayuda">
                 </a>
                 <h2 class="AyudaText">Ayuda</h2>
             </div>
         </div>
     </header>
-
+    <!-- Barra de Navegación -->
     <nav class="navbar navbar-expand-lg menu">
         <div class="container">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -60,18 +60,20 @@
                         <a class="nav-link" href="programacion.html">Programación</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="licenciasDesign.html">Licencias de Programas de Diseño</a>
+                        <a class="nav-link" href="licenciasDesign.html">Licencias de Programas</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
+    <!-- Titulo de Seccion -->
     <div class="TituloPage">
         <h1 class="TextTitulo">
             Entornos de Desarrollo Integrado (IDE)
         </h1>
     </div>
-    <main class="ProgramacionSoftwaresContainer mt-2 mb-2">
+    <!-- Main de la Page -->
+    <main class="ProgramacionSoftwaresContainer mt-2 mb-4">
         <div class="row row-cols-1 row-cols-md-3 g-4">
             <!-- Card VSC -->
             <div class="col">
